# rino

./: Cargo.toml  build.rs
crates/arch-x86_64/: Cargo.toml
crates/arch-x86_64/src/: interrupts.rs  lib.rs  macros.rs  serial.rs
crates/hal-traits/: Cargo.toml
crates/hal-traits/src/: lib.rs
crates/kernel-core/: Cargo.toml
crates/kernel-core/src/: allocator.rs  lib.rs
kernel/: Cargo.toml
kernel/src/: main.rs
src/: main.rs
