[package]
name = "rino"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "kernel",
    "crates/hal-traits",
    "crates/kernel-core",
    "crates/arch-x86_64",
]

[build-dependencies]
bootloader = "0.11"
rino-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }